create user interface
